# Physical-AI-Humanoid-Robotics-Textbook

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  LAUNCH_CHECKLIST.md  README.md  railway.toml
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
.specify/memory/: constitution.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  nixpacks.toml  pyproject.toml  railway.json  render.yaml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  auth_agent.py  base.py  code_agent.py  content_agent.py  history_agent.py  personalization_agent.py  rag_agent.py  registry.py  router.py  translation_agent.py  ui_agent.py
backend/app/agents/skills/: __init__.py
backend/app/api/: dependencies.py
backend/app/api/routes/: __init__.py  agents.py  auth.py  chat.py  health.py  search.py
backend/app/core/: config.py  rate_limiter.py
backend/app/models/: __init__.py  requests.py  responses.py
backend/app/services/: __init__.py  chunker.py  embeddings.py  llm.py  vector_store.py
backend/scripts/: index_content.py
frontend/: .env.example  .eslintrc.js  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tsconfig.json  vercel.json
frontend/docs/: intro.md
frontend/docs/01-intro/: index.md
frontend/docs/02-foundations/: index.md
frontend/docs/03-sensors/: index.md
frontend/docs/04-actuators/: index.md
frontend/docs/05-ai-integration/: index.md
frontend/src/components/: Chatbot.tsx  (+4 more)
specs/001-textbook-generation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+33 files in other folders)
